<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Goldadorn</string>

    <string name="fb_app_id">406364016222124</string>
    <string name="gl_server_api_key">AIzaSyBS7zC9tJFmYzF8HmK-aQNMgV06mO09kLI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_app_start">AppStart</string>
    <string name="loadinApp">Loading...</string>
    <string name="createAccountButton">Create Account</string>
    <string name="createAccountLink">Not Signed Up?\nCreate An Account Now</string>
    <string name="loginButton">Login</string>
    <string name="loginLink">Signed Up Already? Login Now</string>

    <string name="orLabel">OR</string>
    <string name="orSocialLogin">login with</string>
    <string name="orRegisterWithSocial">Register With</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_passord">Password</string>
    <string name="hint_passord_confirm">Confirm Password</string>


    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter valid password</string>
    <string name="err_msg_password_not_match">Password not match</string>
    <string name="err_msg_f_name">Enter valid first name</string>
    <string name="err_msg_l_name">Enter valid first name</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="hint_f_name">Enter Your First Name</string>
    <string name="hint_l_name">Enter Your Last Name</string>
    <string name="labelMale">Male</string>
    <string name="labelFemale">Female</string>
    <string name="labelGender">Gender:</string>
    <string name="creatingAnAccount">By creating an account, you agree to GoldAdorn <a href="http://www.goldadorn.com/terms-of-use"><font color="#004fd7"><u>content policy</u></font></a>, <a href="http://www.goldadorn.com/privacy-security-policy"><font color="#004fd7"><u>privacy policy</u></font></a> and <a href="http://www.goldadorn.com/terms-of-use"><font color="#004fd7"><u>terms and conditions</u></font></a></string>
    <string name="registerSuccssMsg">Registration done successfully</string>
    <string name="socialFeeds">Social Feed</string>
    <string name="findPeople">People</string>
    <string name="selecFilter">Showcase</string>
    <string name="timeline">Timeline</string>
    <string name="shopBy">Our Collections</string>
    <string name="myCollections">My Collections</string>
    <string name="wishlist">Wishlist</string>
    <string name="share">Share</string>
    <string name="inviteFacebookFriends">Invite Facebook Friends</string>
    <string name="rateAPP">Rate Our App</string>
    <string name="contactUs">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="moreOptions">More Options</string>
    <string name="myProfile">My Profile</string>
    <string name="redemption">My Redemption Details</string>
    <string name="myLikes">My Likes</string>
    <string name="myOrder">My Orders</string>
    <string name="orderTracking">Order Tracking</string>
    <string name="aboutUS">About US</string>
    <string name="policies">Policies</string>
    <string name="shippingAndReturnPolicy"><![CDATA[Shipping & Return Policy]]></string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="termsAndConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="appShareTitle">Share The App In Your Network</string>
    <string name="appShareBody">"Hey Check out this app. it has interesting jewellery options :  "</string>


    <string name="contactUsURL">contact-us.html</string>
    <string name="aboutUsURL">about-us.html</string>
    <string name="shippingAndReturnPolicyURL">return-policy.html</string>
    <string name="privacyPolicyUTRL">privacy-policy.html</string>
    <string name="termsAndConditionsURL">terms.html</string>
    <string name="faqsURL">faqs.html</string>


    <string name="palyStoreBasicURL">https://play.google.com/store/apps/details?id=</string>
    <string name="commentCountLabel">" Comments"</string>
    <string name="likesCountLabel">" Likes"</string>
    <string name="shareCOuntLabel">"Share: "</string>
    <string name="voteCountLabel">" Votes"</string>
    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="faqs">FAQs</string>
    <string name="sizeGuide">Size Guide</string>
    <string name="diaQualGuide">Diamond Quality Guide</string>
    <string name="buyBackPolicy">Buy Back Policy</string>
    <string name="hashtag">Hashtags</string>
    <string name="redemDetails">Redemption Details</string>
    <string name="showcase">Showcase</string>
    <string name="collections">Collections</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="social">Social</string>
    <string name="total">Total</string>
    <string name="product">product</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>

    <string name="Product">Product</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>

    <string name="customize">Customize</string>

    <string name="font_name_edit_text">din-regular.ttf</string>
    <string name="font_name_text_normal">din-regular.ttf</string>
    <string name="font_name_text_secondary">didot-italic.ttf</string>

    <string name="product_desc">Product Code\n<xliff:g example="1001EA1115S9O2G2M07" id="id">%s</xliff:g>\n\nHeight\t\t\t\t\t\t\t\tWidth\n<xliff:g example="25.99mm" id="height">%s</xliff:g>\t\t\t\t\t<xliff:g example="11.44mm" id="width">%s</xliff:g>\n\nProduct Weight[Approx.]\n<xliff:g example="5.55 grams" id="weight">%s</xliff:g></string>
    <string name="product_information">Product Information</string>
    <string name="labelRecomandation">Recommendation</string>
    <string name="basic_profile">Basic Profile</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="zipcode">Zip Code</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_birthday">Birthday</string>
    <string name="edit_profile">Edit profile</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_country">Country</string>
    <string name="hint_forgot_password">Enter your Email Id below. A link to reset your password will be sent to you shortly.</string>

    <string name="rate_app_title">Rate Us</string>
    <string name="rate_app_msg">If you enjoyed using this App, would you mind taking a moment to rate Us. Thank you for your support</string>
    <string name="rate_app_later">Later</string>
    <string name="rate_app_no">Not Interested</string>
    <string name="rate_app_yes">Rate now</string>
</resources>
